# GarbageFinder

./: .editorconfig  .gitignore  CMakeLists.txt  GarbageFinder.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h
gf/: CMakeLists.txt  FileNode.h  FileTree.cpp  FileTree.h  main.cpp
gf-gui/: mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  Error.cpp  Error.h  FileInfo.h  FileNode.cpp  FileNode.h  FileSystem.cpp  FileSystem.h  main.cpp
src/gui-qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/qt/: CMakeLists.txt
